tests/baselines/reference/accessorDeclarationEmitVisibilityErrors.errors.txt
tests/cases/compiler/accessorDeclarationEmitVisibilityErrors.ts(2,18): error TS2304: Cannot find name 'DoesNotExist'.
tests/cases/compiler/accessorDeclarationEmitVisibilityErrors.ts(2,18): error TS4037: Parameter type of public setter 'bet' from exported class has or is using private name 'DoesNotExist'.


==== tests/cases/compiler/accessorDeclarationEmitVisibilityErrors.ts (2 errors) ====
    export class Q {
        set bet(arg: DoesNotExist) {}
                     ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'DoesNotExist'.
                     ~~~~~~~~~~~~
!!! error TS4037: Parameter type of public setter 'bet' from exported class has or is using private name 'DoesNotExist'.
    }